trunk/Archive2/2f/c0b4ed6e8b0b0f/output
main.cpp:1205:31: error: conversion from 'int' to non-scalar type 'pointer_list2<int, double> {aka meta::list<int*, double*>}' requested
 pointer_list2<int,double> ff= 4;
                               ^
main.cpp:1220:7: error: conversion from 'int' to non-scalar type 'c {aka meta::list<float*>}' requested
 c g = 3;
       ^
